--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/jpg" href="/logo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NexaNews</title>
+    <script src="/env-config.js"></script>
   </head>
   <body>
     <div id="root"></div>
